# grobid_client_python

./: .gitignore  LICENSE  MANIFEST.in  Readme.md  config.json  example.py  grobid-client.py  grobid.py  grobid_client.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  test-cache.py  test.py
.github/workflows/: ci-build.yml  ci-release.yml
grobid_client/: client.py  grobid_client.py  test.py
grobid_client/format/: TEI2LossyJSON.py  TEI2Markdown.py
resources/: 20180928112138.csv
resources/test/: 0046d83a-edd6-4631-b57c-755cdcce8b7f.tei.xml
resources/test/test_1/: 0f318087-b211-4ace-8ac9-3d9372a73c1c.tei.xml
resources/test_out/: 0046d83a-edd6-4631-b57c-755cdcce8b7f.grobid.tei.xml  0046d83a-edd6-4631-b57c-755cdcce8b7f.tei.xml  0046d83a-edd6-4631-b57c-755cdcce8b7f_406.txt
resources/test_out/test_1/: 0f318087-b211-4ace-8ac9-3d9372a73c1c.tei.xml
resources/test_pdf/: 0046d83a-edd6-4631-b57c-755cdcce8b7f.tei.xml
resources/test_txt/: reference-strings-1.txt  reference-strings-2.txt  reference-strings-3.txt  reference-strings-4.txt  reference-strings-5.txt  reference-strings-6.txt  reference-strings-7.txt
tests/: __init__.py  conftest.py  run_tests.py  test_client.py  test_config.json  test_grobid_client.py  test_integration.py
