[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.bumpversion]
current_version = "0.0.9"
commit = "true"
tag = "true"
tag_name = "v{new_version}"

[project]
name = "grobid-client-python"
license = { file = "LICENSE" }
authors = [
    { name = "Patrice Lopez", email = "patrice.lopez@science-miner.com" },
]
maintainers = [
    { name = "Patrice Lopez", email = "patrice.lopez@science-miner.com" },
    { name = "Luca Foppiano", email = "lucanoro@duck.com" }
]
description = "Simple python client for GROBID REST services"
readme = "Readme.md"

dynamic = ['version', "dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools_scm]

[tool.setuptools]
packages=['grobid_client']

[project.urls]
Homepage = "https://github.com/kermitt2/grobid_client_python"
Repository = "https://github.com/kermitt2/grobid_client_python"
Changelog = "https://github.com/kermitt2/grobid_client_python"

[project.scripts]
grobid_client = "grobid_client.grobid_client:main"